Closed
Bug 645632
Opened 14 years ago
Closed 14 years ago
TI: Assertion failure: !unknownProperties, at ../jsinferinlines.h:1164
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
(Keywords: assertion, regression, testcase)
--
function f(o) {
o[{}] = 1;
with(Object) {}
}
f(Object.prototype);
--
$ ./js -n -a test.js
Assertion failure: !unknownProperties, at ../jsinferinlines.h:1164
Comment 1•14 years ago
|
||
Due to skipped revisions, the first bad revision could be any of:
changeset: 63691:2a6ecf5af25c
user: Brian Hackett <bhackett1024@gmail.com>
date: Sat Mar 26 19:07:13 2011 -0700
summary: [INFER] Inline scripted calls, bug 639099.
changeset: 63692:e2b96219a262
user: Brian Hackett <bhackett1024@gmail.com>
date: Sat Mar 26 19:56:49 2011 -0700
summary: [INFER] Fix x64 build, revert accidental manifest.py changes, bug 639099.
Blocks: 639099
Comment 2•14 years ago
|
||
Unnecessarily trying to notify inline callers of new dynamic types in the callee, when the function has unknown properties and can't be inlined regardless.
http://hg.mozilla.org/projects/jaegermonkey/rev/6acd5754040b
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 3•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/bug645632.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•