[INFER] Don't notify constraints of new TypeResults on functions with unknown properties, bug 645632.